# super-benchmark

./: .gitignore  README.md
super_benchmark/: .env  pyproject.toml
super_benchmark/super_benchmark/: __init__.py  data_processing.py
super_benchmark/super_benchmark/models/: __init__.py  bench_stat.py  benchmark.py
test_task.py/__MACOSX/: ._test_task.py
